tinypng压缩Spine图片
