# src/controller/spine.js
@@ -1,5 +1,6 @@
 const Base = require('./base');
 const path = require('path');
+const url = require('url');
 const fs = require('fs-extra');
 const { think } = require('thinkjs');
 
@@ -9,27 +10,37 @@ module.exports = class extends Base {
     this.baseurl = path.join(think.ASSETS_PATH, 'SD');
   }
 
+  // 通过SD小人id获取skeleton、atlas、texture地址
   async indexAction() {
-    const sdList = await fs.readdir(this.baseurl);
-    return this.success(sdList);
+    const { id, isuseCDN } = this.get();
+    const sdPath = path.join(this.baseurl, id);
+    if (think.isExist(sdPath)) {
+      const prefix = isuseCDN === 'true' ? this.CDNDomain : this.ctx.origin.replace(/http:|https:/, '');
+      const binaryPath = path.join(sdPath, `${id}.skel`);
+      const jsonPath = path.join(sdPath, `${id}.json`);
+      const atlasPath = path.join(sdPath, `${id}.atlas`);
+      const texturePath = path.join(sdPath, `${id}.png`);
+      const result = {
+        atlas: think.isExist(atlasPath) ? url.resolve(prefix, atlasPath.replace(think.ASSETS_PATH, '')) : '',
+        texture: think.isExist(texturePath) ? url.resolve(prefix, texturePath.replace(think.ASSETS_PATH, '')) : ''
+      };
+      // skel格式的skeleton
+      if (think.isExist(binaryPath)) {
+        result.skeletonBinary = url.resolve(prefix, binaryPath.replace(think.ASSETS_PATH, ''));
+      }
+      // json格式的skeleton
+      if (think.isExist(jsonPath)) {
+        result.skeletonJson = url.resolve(prefix, jsonPath.replace(think.ASSETS_PATH, ''));
+      }
+      return this.success(result);
+    } else {
+      return this.fail('This id is no exist');
+    }
   }
 
-  async updateAction() {
-    const output = think.getdirFiles(path.join(think.ASSETS_PATH, 'tiny/output'));
+  // 获取SD小人列表
+  async listAction() {
     const sdList = await fs.readdir(this.baseurl);
-    sdList.forEach(item => {
-      const findPicture = output.find(element => element.includes(item));
-      if (findPicture) {
-        const src = path.join(think.ASSETS_PATH, 'tiny/output/' + findPicture);
-        if (think.isExist(src)) {
-          const source = path.join(think.ASSETS_PATH, 'tiny/', findPicture);
-          fs.remove(source);
-          const dest = path.join(this.baseurl, item, findPicture);
-          fs.move(src, dest, err => {
-            if (err) return console.error(err);
-          });
-        }
-      }
-    });
+    return this.success(sdList);
   }
 };
